2000-04-14  Chris Toshok  <toshok@helixcode.com>

	* tests/.cvsignore: add test12

	* tests/test12.c (main): add test for nntp stuff.

	* tests/Makefile.am (noinst_PROGRAMS): same.


2000-04-14  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-card.c,
	addressbook/backend/ebook/e-card.h,
	addressbook/backend/pas/pas-backend-file.c,
	addressbook/backend/pas/pas-backend-ldap.c,
	addressbook/contact-editor/e-contact-editor.c: Added a note field.

2000-04-15  Ettore Perazzoli  <ettore@helixcode.com>

	* addressbook/backend/ebook/e-card-cursor.h: #include
	"addressbook/backend/ebook" to make sure we pick up the right
	addressbook.h.  Butt ugly, but at least it makes it possible for
	me to build Evolution.

	* addressbook/gui/minicard/Makefile.am (INCLUDES): Use
	`$(builddir)' so that we pick up the IDL-generated includes
	correctly.
	* addressbook/backend/pas/Makefile.am: Likewise.  Also use
	`$(srcdir)'.

	* addressbook/backend/ebook/Makefile.am: Use `$(srcdir)' so that
	it works with builddir != srcdir.
	* addressbook/backend/pas/Makefile.am: Likewise.

2000-04-14  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-ldap.c
	(pas_backend_ldap_ensure_connected): don't ldap_simple_bind_s if
	the ldap_open failed, and fix warnings.
	(pas_backend_ldap_build_all_cards_list): don't do search if the
	ensure_connected failed, and fix warnings.
	(pas_backend_ldap_search): same.
	(poll_ldap): fix warnings.
	(pas_backend_ldap_process_get_book_view): same.
	(pas_backend_ldap_get_vcard): same.
	(pas_backend_ldap_load_uri): same.

	* configure.in: quiet configure in the case where it can't find
	ldap libs.

2000-04-13  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/contact-editor/e-contact-editor.c (extract_info):
	Check for 0 length fields when building the outgoing ECard.

2000-04-13  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/pas/pas-book-view.c: Give correct warnings.
